--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,35 +1,41 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>
-      <ion-label class="logo">Brunogram</ion-label>
-    </ion-title>
-    <ion-buttons slot="end">
-      <ion-item color="primary">
-        <ion-avatar (click)="showOptions()">
-          <img src="{{ user.image }}">
-        </ion-avatar>
-      </ion-item>
-    </ion-buttons>
-  </ion-toolbar>
+   <ion-toolbar color="primary">
+      <ion-title>
+         <ion-label class="logo">Brunogram</ion-label>
+      </ion-title>
+      <ion-buttons slot="end">
+         <ion-item color="primary">
+            <ion-avatar (click)="showOptions()">
+               <img src="{{ user.image }}">
+            </ion-avatar>
+         </ion-item>
+      </ion-buttons>
+   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-  <ion-card *ngFor="let post of posts | async">
-    <ion-card-header>
-      <ion-card-title>{{ post.userName }}</ion-card-title>
-      <ion-card-subtitle>{{ post.date }}</ion-card-subtitle>
-      <ion-card-subtitle>{{ post.description }}</ion-card-subtitle>
-    </ion-card-header>
-    <ion-card-content class="animated zoomIn">
-      <img src="{{ post.image }}" class="{{ post.filter }}">
-    </ion-card-content>
-  </ion-card>
+   <ion-grid>
+      <ion-row>
+         <ion-col size-xs="12" size-md="6" *ngFor="let post of posts | async">
+            <ion-card>
+               <ion-card-header>
+                  <ion-card-title>{{ post.userName }}</ion-card-title>
+                  <ion-card-subtitle>{{ post.date }}</ion-card-subtitle>
+                  <ion-card-subtitle>{{ post.description }}</ion-card-subtitle>
+               </ion-card-header>
+               <ion-card-content class="animated zoomIn">
+                  <img src="{{ post.image }}" class="{{ post.filter }}">
+               </ion-card-content>
+            </ion-card>
+         </ion-col>
+      </ion-row>
+   </ion-grid>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="primary" routerLink="/take-photo">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button color="primary" routerLink="/take-photo">
+         <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+   </ion-fab>
 
 </ion-content>
